feat: ClarityClient with DB caching + PDF generator Clarity sections + settings

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ DATABASE_URL=sqlite:///./court_monitor.db
 OPENDATABOT_API_KEY=your_api_key_here
 OPENDATABOT_BASE_URL=https://opendatabot.com/api/v3
 
+# Clarity Project API
+CLARITY_API_KEY=your_clarity_key_here
+CLARITY_BASE_URL=https://clarity-project.info/api
+
 # Worksection API
 WORKSECTION_API_KEY=962f86852377d3b3a64c117b795dc172
 WORKSECTION_ACCOUNT=kraiz
