--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,9 @@ aiogram>=3.2.0
 # Scheduling
 apscheduler>=3.10.0
 
+# PDF generation
+fpdf2>=2.7.9
+
 # Utilities
 tenacity>=8.2.0
 structlog>=23.2.0
