docs: complete README.md with installation guide, env docs, migration instructions, updated server requirements

--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,54 @@
-# Database (SQLite for dev, MySQL for prod)
+# ============================================================
+# LWData Bot — Configuration
+# Copy this file to .env and fill in your values
+# chmod 600 .env
+# ============================================================
+
+# --- Database ------------------------------------------------
+# SQLite (default, no setup needed):
 DATABASE_URL=sqlite:///./court_monitor.db
+# MySQL (optional, for high load):
 # DATABASE_URL=mysql+aiomysql://user:password@localhost:3306/court_monitor
 
-# OpenDataBot API
-OPENDATABOT_API_KEY=your_api_key_here
-OPENDATABOT_BASE_URL=https://opendatabot.com/api/v3
-
-# Clarity Project API
-CLARITY_API_KEY=your_clarity_key_here
-CLARITY_BASE_URL=https://clarity-project.info/api
-
-# Worksection API
-WORKSECTION_API_KEY=962f86852377d3b3a64c117b795dc172
-WORKSECTION_ACCOUNT=kraiz
-
-# Telegram Bot
-TELEGRAM_BOT_TOKEN=8417603506:AAFcwAx4tI2Pjy8KJa4IfEggyo4wvBAxfTg
+# --- Telegram Bot (ОБОВ'ЯЗКОВО) ------------------------------
+# Отримати у @BotFather: https://t.me/BotFather
+TELEGRAM_BOT_TOKEN=your_bot_token_here
+# Telegram user IDs адмінів (через кому). Дізнатись свій ID: @userinfobot
 TELEGRAM_ADMIN_IDS=
 
-# Monitoring Settings
-CHECK_INTERVAL_MINUTES=60
-WORKSECTION_SYNC_INTERVAL_HOURS=6
+# --- OpenDataBot API (ОБОВ'ЯЗКОВО) ---------------------------
+# Кабінет: https://opendatabot.ua/my/api
+# Ключ для моніторингу (підписки, історія подій):
+OPENDATABOT_API_KEY=your_monitoring_api_key
+# Ключ для повних перевірок (компанії, ФОП, персони):
+OPENDATABOT_FULL_API_KEY=your_full_api_key
+OPENDATABOT_BASE_URL=https://opendatabot.com/api/v3
+
+# --- Clarity Project API (ОБОВ'ЯЗКОВО) -----------------------
+# Документація: https://github.com/the-clarity-project/api
+# Отримати ключ: https://clarity-project.info/info/api/
+CLARITY_API_KEY=your_clarity_api_key
+CLARITY_BASE_URL=https://clarity-project.info/api
+
+# --- Worksection (опціонально) --------------------------------
+# Для синхронізації судових справ з Worksection
+WORKSECTION_API_KEY=
+WORKSECTION_ACCOUNT=
+
+# --- GitHub Gist sync (опціонально) ---------------------------
+# Альтернатива прямому Worksection API: синхронізація через Gist
+# Див. docs/GIST_SETUP.md
+WORKSECTION_GIST_ID=
+
+# --- Розклад моніторингу (UTC) --------------------------------
+# Години перевірки нових судових подій (через кому):
+OPENDATABOT_CHECK_HOURS=8,20
+# Години синхронізації Worksection (перед перевіркою ODB):
+WORKSECTION_SYNC_HOURS=7,19
+# Режим першого запуску: index_only (тихо) | notify_all (з повідомленнями)
 INITIAL_RUN_MODE=index_only
 
-# Case number extraction pattern
-WORKSECTION_CASE_PATTERN=(\d{3,4}/\d+/\d{2}(?:-[А-Яа-яІіЇїЄєҐґЦц]+)?)
-
-# Threat Detection
+# --- Детекція загроз ------------------------------------------
 DANGEROUS_PLAINTIFFS=прокуратура,податкова,поліція,дбр,набу,сбу,держгеокадастр,виконавча служба
 HIGH_PRIORITY_CASE_TYPES=2,5
+WORKSECTION_CASE_PATTERN=(\d{3,4}/\d+/\d{2}(?:-[А-Яа-яІіЇїЄєҐґЦц]+)?)
