docs: remove WORKSECTION_API_KEY from env docs (access via Gist only)

--- a/.env.example
+++ b/.env.example
@@ -30,13 +30,8 @@ OPENDATABOT_BASE_URL=https://opendatabot.com/api/v3
 CLARITY_API_KEY=your_clarity_api_key
 CLARITY_BASE_URL=https://clarity-project.info/api
 
-# --- Worksection (опціонально) --------------------------------
-# Для синхронізації судових справ з Worksection
-WORKSECTION_API_KEY=
-WORKSECTION_ACCOUNT=
-
-# --- GitHub Gist sync (опціонально) ---------------------------
-# Альтернатива прямому Worksection API: синхронізація через Gist
+# --- Worksection sync (опціонально) ----------------------------
+# Синхронізація судових справ з Worksection через GitHub Gist
 # Див. docs/GIST_SETUP.md
 WORKSECTION_GIST_ID=
 
