feat: add Connection Graph API integration - connections PDF button in contractor checks

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,11 @@ OPENDATABOT_BASE_URL=https://opendatabot.com/api/v3
 CLARITY_API_KEY=your_clarity_api_key
 CLARITY_BASE_URL=https://clarity-project.info/api
 
+# --- Connection Graph API (зв'язки контрагентів) ----------------
+# Звіт зв'язків: компанії, бенефіціари, директори, ФОП
+CONNECTION_GRAPH_API_KEY=your_connection_graph_api_key
+CONNECTION_GRAPH_API_URL=http://54.38.53.70/api/v1/report
+
 # --- Worksection sync (опціонально) ----------------------------
 # Синхронізація судових справ з Worksection через GitHub Gist
 # Див. docs/GIST_SETUP.md
